[tool.poetry]
name = "envtyped"
version = "0.1.0"
description = ""
authors = ["cuire <81014305+cuire@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
mock = "^5.1.0"
types-mock = "^5.1.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
