[tool.poetry]
name = "envtyped"
version = "0.1.1"
description = "Strong typing for your environment variables"
authors = ["cuire <81014305+cuire@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
mock = "^5.1.0"
types-mock = "^5.1.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
